--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "type": "module",
   "devDependencies": {
-    "vitepress": "^1.0.0-alpha.64"
+    "vitepress": "^1.0.0-rc.13"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
